Fixing alignment:

--- a/styles.css
+++ b/styles.css
@@ -251,13 +251,14 @@ main {
 }
 
 .avatar {
-  padding-bottom: 5em;
+  padding-bottom: 3em;
   display: flex;
   align-items: center;
+  flex-direction: column;
 }
 
 .pfp {
-  border: 3px solid var(--clr-fg);
+  border: 2px solid var(--clr-fg);
   border-radius: 50%;
 }
 
